# AI-Native-Hackathon

./: README.md  pyproject.toml
.specify/memory/: constitution.md
backend/: main.py  requirements.txt
backend/src/: main.py
docs/module1-ros2/: intro.md  nodes-topics-services-actions.md  nodes-topics.md  urdf-python.md
docs/module2-digital-twin/: gazebo-simulation.md  sensor-simulation.md  unity-visualization.md
docs/module3-ai-brain/: _category_.json  intelligent-agents.md  isaac-ros.md  isaac-sim.md  nav2-planning.md  ros2-control.md
docs/module4-vla/: voice-to-action.md
frontend/: README.md  docusaurus.config.ts  sidebars.ts
history/adr/: ADR-1-Update-Project-Constitution.md
skills/answer_with_context/: __init__.py
skills/check_dependencies/: __init__.py
skills/deploy_site/: __init__.py
skills/generate_diagrams/: __init__.py
skills/generate_exercise/: __init__.py
skills/personalize_content/: __init__.py
skills/summarize_chapter/: __init__.py
skills/translate_text/: __init__.py
skills/update_rag/: __init__.py
skills/validate_code/: __init__.py
specs/1-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
subagents/chapter_writer/: __init__.py
subagents/code_generator/: __init__.py
subagents/content_reviewer/: __init__.py
subagents/deployment_agent/: __init__.py
subagents/diagram_assistant/: __init__.py
subagents/personalization_agent/: __init__.py
subagents/quiz_generator/: __init__.py
subagents/rag_integrator/: __init__.py
subagents/urdu_translator/: __init__.py
(+88 files in other folders)
